cut off logo fix

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,7 @@
 #page-margin {
     padding: 30px;
 }
+mh-navigation{
+    height:50px;
+    width:100%;
+}
